# roc-basic-cli

./: .gitignore
.cargo/: config.toml
examples/: args.roc  countdown.roc  definitely-not-a-mem-hog.roc  definitely-will-not-crash.roc  echo.roc  form.roc  http-get.roc
src/: Cargo.toml  Effect.roc  Stdin.roc
src/.cargo/: config.toml
src/src/: lib.rs
