[package]
name = "host"
version = "0.0.1"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
edition = "2021"

[lib]
name = "host"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
roc_std = { path = "../../roc/crates/roc_std" }
libc = "0.2"
backtrace = "0.3"
reqwest = { version="0.11.11", default-features=false, features=["blocking", "rustls-tls"] }
bumpalo = "3.12.0"
rustyline = { version = "11.0.0", features = ["derive"]}
libloading = "0.7"

[workspace]
